-- +goose Up
-- SQL in this section is executed when the migration is applied.
CREATE EXTENSION IF NOT EXISTS "uuid-ossp";

CREATE TABLE users (
  id UUID PRIMARY KEY DEFAULT uuid_generate_v4(),
  email VARCHAR(255) NOT NULL UNIQUE,
  password_hash VARCHAR(255),
  profile_picture VARCHAR(255),
  account_type VARCHAR(50) NOT NULL,
  gender VARCHAR(50),
  personal_account_type VARCHAR(50) NOT NULL,
  first_name VARCHAR(255) NOT NULL,
  last_name VARCHAR(255) NOT NULL,
  nationality VARCHAR(255) NOT NULL,
  residential_country VARCHAR(255),
  job_role VARCHAR(255),
  company_website VARCHAR(255),
  employment_type VARCHAR(255),
  created_at TIMESTAMPTZ NOT NULL DEFAULT now(),
  updated_at TIMESTAMPTZ NOT NULL DEFAULT now()
);

CREATE INDEX idx_users_email ON users(email);

COMMENT ON COLUMN users.account_type IS 'business, personal';
COMMENT ON COLUMN users.personal_account_type IS 'contractor, freelancer, employee';

-- +goose Down
-- SQL in this section is executed when the migration is rolled back.
DROP TABLE IF EXISTS users;